add navigation bar

--- a/index.html
+++ b/index.html
@@ -2,10 +2,19 @@
 <html lang="en">
 <head>
   <title>This is a webpage</title>
-  <script src="scripts.js"> </script> 
+  <script src="scripts.js"> </script>
+  <link rel="stylesheet" href="mystyle.css">
 
 </head>
 <body>
+
+  <ul>
+    <li><a class="active" href="#home">Home</a></li>
+    <li><a href="#news">News</a></li>
+    <li><a href="#contact">Contact</a></li>
+    <li><a href="#about">About</a></li>
+  </ul>
+
 <h1>This is a heading</h1>
 <p>This is a paragraph.</p>
 
